# daidori-manager-tauri

./: CLAUDE.md  index.html  package-lock.json  package.json
src/: App.tsx  icons.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: tiff_convert.jsx
src-tauri/src/: constants.rs  image_utils.rs  lib.rs  main.rs  state.rs
src-tauri/src/cache/: disk.rs  memory.rs  mod.rs
src-tauri/src/commands/: export.rs  folder.rs  mod.rs  open_file.rs  project.rs  recent.rs  tiff.rs
src-tauri/src/thumbnail/: image.rs  mod.rs  psd.rs
src-tauri/src/types/: export.rs  file.rs  mod.rs  project.rs  tiff.rs
src/components/dnd/: DragOverlays.tsx  DropZones.tsx  index.ts
src/components/header/: index.ts
src/components/modals/: ExportModal.tsx  index.ts
src/components/preview/: SpreadViewer.tsx  ThumbnailCard.tsx  index.ts
src/components/sidebar/: ChapterItem.tsx  SortablePageItem.tsx  index.ts
src/constants/: dnd.ts
src/hooks/: index.ts  useDarkMode.ts  useThumbnailQueue.ts
